[package]
name = "oqs-provider-sys"
version = "0.1.0"
edition = "2021"

[dependencies]
oqs-sys = {git = "https://github.com/open-quantum-safe/liboqs-rust", features = ["vendored", "openssl"]}
openssl-sys = {version = "0.9", features = ["vendored"]}

[build-dependencies]
bindgen = "0.71.1"
cmake = "0.1"

[dev-dependencies]
openssl = "*"
bench = {git = "https://github.com/aws/s2n-tls"}
s2n-tls = "0.3.9"
s2n-tls-sys = "0.3.9" 


# use the bench crate from git, but consume the s2n-tls crates from crates.io
[patch."https://github.com/aws/s2n-tls"]
s2n-tls = "0.3.9" 
s2n-tls-sys = "0.3.9" 
